<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">工大小助手</string>
    <string name="action_settings">设置</string>
	<string name="username">学号:</string>
	<string name="password">密码:</string>
	<string name="rememberPassword">记住密码</string>
	<string name="login">登陆</string>
	<string name="clearInput">清空</string>
	<string name="scoresList">成绩列表</string>
	<string name="refresh">刷新</string>
	<string name="copyright">Powered by tpircsboy</string>
    
</resources>
