<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/background" >

    <TableLayout 
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

        <TableRow>

            <TextView
                android:text="@string/username"
                android:textSize="20sp"
                android:width="80dp" 
                android:textColor="#FFFFFF"
                 />

           	<EditText
            	 android:id="@+id/txtUserName"
            	 android:width="150dp"
            	 android:inputType="text"
            	 android:textColor="#FFFFFF"
            	 />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/password"
                android:textSize="20sp" 
                android:textColor="#FFFFFF"
                />

            <EditText 
                android:id="@+id/txtPassword"
                android:inputType="textPassword"
                />
                
        </TableRow>

        <TableRow>
            <TextView />
            <CheckBox 
                android:id="@+id/chkRememberPassword"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/rememberPassword"
                android:textColor="#FFFFFF"
                />
            
        </TableRow>
    </TableLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        >
	    	<Button 
                android:id="@+id/btnSignIn"
                android:text="@string/login"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                />
	    	<TextView
	    	    android:layout_width="30dp"
	    	    android:layout_height="wrap_content"
	    	    />
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnClearInput"
                android:text="@string/clearInput"
                android:textColor="#FFFFFF"
                />
	</LinearLayout>

</RelativeLayout>
